--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 
 <!--NAVBAR-->
 <nav>
-  <div class="container pbt-100 border-0">
+  <div class="container border-0">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
       <!--dropdown-menu-start-->
