--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -9,11 +9,11 @@
       <div class="col-6 contact-form">
         <form onsubmit="alert('Thank you for your message!! We will contact you soon.')">
           <div class="row name-user">
-            <div class="col-6 firstname">
+            <div class="col-6 firstname ps-0">
               <label>First name</label>
               <input class="inpu" type="text">
             </div>
-            <div class="col-6 lastname">
+            <div class="col-6 lastname pe-0">
               <label>Last name</label>
               <input class="inpu" type="text">
             </div>
@@ -42,10 +42,10 @@
   </div>
   <div class="aguri-info">
     <div class="row">
-      <div class="col-5 infor">
-        <div class="showroom">
+      <div class="col-5 infor px-0">
+        <div class="showroom mb-4">
           <p class="mdt">Showroom</p>
-          <p class="smt">6901 Hollywood Blvd, Los Angeles, CA 90028, United States</p>
+          <p class="smt mb-2">6901 Hollywood Blvd, Los Angeles, CA 90028, United States</p>
           <p class="smt">10 Northumberland St, London WC2N 5DB, United Kingdom</p>
         </div>
         <div class="mail-inf">
