--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -14,6 +14,11 @@
 .review-name{
   margin-bottom:40px;
 }
+/*OFFCANVAS*/
+
+
+
+
 /*Similar-product*/
 
 
@@ -55,6 +60,7 @@
 .simi-right{
   padding-right:0px;
 }
+
 /*Review*/
 .review-start{
   justify-content: center;
