--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,14 @@
         <ul class="d-flex justify-content-end">
           <li class="p-2">Sign in</li>
           <li class="p-2"><i class="fa fa-shopping-cart fa-lg"></i></li>
-          <li class="p-2"><i class="fa fa-search fa-lg"></i></li>
+          <!--search-button-start-->
+          <li class="p-2 search-button dropdown">
+            <i class="fa fa-search fa-lg"></i>
+            <div class="dropdown-content">
+              <input type="text" placeholder="Search AGURI">
+            </div>
+          </li>
+          <!--search-button-end-->
         </ul>
       </div>
     </div>
@@ -28,7 +35,7 @@
 
 <!--NAVBAR-->
 <nav>
-  <div class="container border-0">
+  <div class="container border-0 pbt-100">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
       <!--dropdown-menu-start-->
