--- a/src/styles.css
+++ b/src/styles.css
@@ -151,6 +151,14 @@ label{
   padding-top:20px;
   padding-bottom:20px;
 }
+.search-button .dropdown-content {
+  margin: 10px 0;
+  padding: 20px;
+  transform: translateX(-200px);
+}
+.search-button .dropdown-content input {
+  padding: 5px 10px;
+}
 
 /*NAV*/
 .nav-link{
