--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,11 +41,37 @@
       <!--dropdown-menu-start-->
       <li class="nav-item dropdown">
         <a class="nav-link dropbtn" routerLink="/shop-all">Shop All</a>
-        <div class="dropdown-content">
-          <a routerLink="/rings">Rings</a>
-          <a routerLink="/earrings">Earrings</a>
-          <a routerLink="/bracelets">Bracelets</a>
-          <a routerLink="/necklaces">Necklaces</a>
+        <div class="dropdown-content mtp">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col"><a routerLink="/rings">Rings</a></th>
+                <th scope="col"><a routerLink="/earrings">Earrings</a></th>
+                <th scope="col"><a routerLink="/bracelets">Bracelets</a></th>
+                <th scope="col"><a routerLink="/necklaces">Necklaces</a></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a routerLink="#">Eternity</a></td>
+                <td><a routerLink="#">Stud</a></td>
+                <td><a routerLink="#">Chain</a></td>
+                <td><a routerLink="#">Chain</a></td>
+              </tr>
+              <tr>
+                <td><a routerLink="#">Cocktail</a></td>
+                <td><a routerLink="#">Drop & Dangle</a></td>
+                <td><a routerLink="#">Bangle</a></td>
+                <td><a routerLink="#">Everyday</a></td>
+              </tr>
+              <tr>
+                <td><a routerLink="#">Wedding</a></td>
+                <td><a routerLink="#">Hoop</a></td>
+                <td><a routerLink="#">Tennis</a></td>
+                <td><a routerLink="#">Layering</a></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </li>
       <!--dropdown-menu-start-->
