--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 
 <!--NAVBAR-->
 <nav>
-  <div class="container border-0 pbt-100">
+  <div class="container border-0">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
       <!--dropdown-menu-start-->
