--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container pt-60">
   <!--jewellery-guide-->
   <div class="row pbt-100">
     <div class="col-12 mbt text-center">
