--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -55,13 +55,13 @@
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <table>
-                <thead class="size-title">
+              <table class="ring-size">
+                <thead class="size-title pb-3">
                   <tr>
                     <th>AGURI (US) size</th>
                     <th class="mx12">Circumference (mm)</th>
                     <th class="select-trans">
-                      <select class="form-select">
+                      <select class="form-select smt">
                         <option selected>UK</option>
                         <option value="1">Japan</option>
                         <option value="2">Italy</option>
@@ -72,19 +72,46 @@
                 </thead>
                 <tbody>
                   <tr class="ring-size text-center">
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
+                    <td>
+                      <button class="btn btn-sec btnsm w-100" type="button">3</button>
+                    </td>
+                    <td>14.1 / 44.2</td>
+                    <td>F</td>
                   </tr>
                   <tr class="ring-cir text-center mx12">
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
+                    <td>
+                      <button class="btn btn-sec btnsm w-100" type="button">3 1/2</button>
+                    </td>
+                    <td>14.5 / 45.5</td>
+                    <td>G 1/2</td>
                   </tr>
                   <tr class="trans-size text-center">
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
+                    <td>
+                      <button class="btn btn-sec btnsm w-100" type="button">4</button>
+                    </td>
+                    <td>14.9 / 46.8</td>
+                    <td>H 1/2</td>
+                  </tr>
+                  <tr class="text-center ">
+                    <td>
+                      <button class="btn btn-sec btnsm w-100" type="button">4 1/2</button>
+                    </td>
+                    <td>15.3 / 48.0</td>
+                    <td>I 1/2</td>
+                  </tr>
+                  <tr class="text-center ">
+                    <td>
+                      <button class="btn btn-sec btnsm w-100" type="button">5</button>
+                    </td>
+                    <td>15.7 / 49.3</td>
+                    <td>J 1/2</td>
+                  </tr>
+                  <tr class="text-center ">
+                    <td>
+                      <button class="btn btn-sec btnsm w-100" type="button">5 1/2</button>
+                    </td>
+                    <td>15.7 / 49.3</td>
+                    <td>J 1/2</td>
                   </tr>
                 </tbody>
               </table>
@@ -521,7 +548,7 @@
     </div>
     <div class="col-7"></div>
     <div class="col-2">
-      <select class="form-select">
+      <select class="form-select smt">
         <option selected>Sort by: Newest</option>
         <option value="1">Highest Rating</option>
         <option value="2">Lowest Rating</option>
@@ -531,13 +558,13 @@
     </div>
   </div>
   <div class="review-box container">
-      <div class="d-flex review-inner">
-        <div class="review-ava">
+    <div class="d-flex review-inner">
+      <div class="review-ava">
           <img src="./assets/img/product-detail/user1.png">
         </div>
-        <div class="review-content w-100 ms-3">
+      <div class="review-content w-100 ms-3">
           <div class="d-flex">
-            <p class="me-auto mb10 user-name mdt">Nthuyduong15</p>
+            <p class="me-auto mb10 user-name mdt">HueVT99</p>
             <span class="smt">2022/12/02</span>
           </div>
           <div>
@@ -552,12 +579,128 @@
           <div class="d-flex">
             <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t
               say for certain what you’ll need to adjust it to.</p>
-            <div class="d-flex">
-              <i class="fa-regular fa-heart"></i>
-              <span class="smt">19</span>
+            <div class="like-review">
+              <i class="align-middle fa-regular fa-heart fa-lg"></i>
+              <span class="smt ms-2">19</span>
             </div>
+          </div>
+        </div>
+    </div>
+    <div class="line mb-3"></div>
+    <div class="d-flex review-inner">
+      <div class="review-ava">
+        <img src="./assets/img/product-detail/user1.png">
+      </div>
+      <div class="review-content w-100 ms-3">
+        <div class="d-flex">
+          <p class="me-auto mb10 user-name mdt">HueVT99</p>
+          <span class="smt">2022/12/02</span>
+        </div>
+        <div>
+          <div class="d-flex rate-start">
+            <i class="fa-solid fa-star fa"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="d-flex">
+          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t
+            say for certain what you’ll need to adjust it to.</p>
+          <div class="like-review">
+            <i class="align-middle fa-regular fa-heart fa-lg"></i>
+            <span class="smt ms-2">19</span>
           </div>
         </div>
       </div>
     </div>
+    <div class="line mb-3"></div>
+    <div class="d-flex review-inner">
+      <div class="review-ava">
+        <img src="./assets/img/product-detail/user1.png">
+      </div>
+      <div class="review-content w-100 ms-3">
+        <div class="d-flex">
+          <p class="me-auto mb10 user-name mdt">HueVT99</p>
+          <span class="smt">2022/12/02</span>
+        </div>
+        <div>
+          <div class="d-flex rate-start">
+            <i class="fa-solid fa-star fa"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="d-flex">
+          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t
+            say for certain what you’ll need to adjust it to.</p>
+          <div class="like-review">
+            <i class="align-middle fa-regular fa-heart fa-lg"></i>
+            <span class="smt ms-2">19</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="line mb-3"></div>
+    <div class="d-flex review-inner">
+      <div class="review-ava">
+        <img src="./assets/img/product-detail/user1.png">
+      </div>
+      <div class="review-content w-100 ms-3">
+        <div class="d-flex">
+          <p class="me-auto mb10 user-name mdt">HueVT99</p>
+          <span class="smt">2022/12/02</span>
+        </div>
+        <div>
+          <div class="d-flex rate-start">
+            <i class="fa-solid fa-star fa"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="d-flex">
+          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t
+            say for certain what you’ll need to adjust it to.</p>
+          <div class="like-review">
+            <i class="align-middle fa-regular fa-heart fa-lg"></i>
+            <span class="smt ms-2">19</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="line mb-3"></div>
+    <div class="d-flex review-inner">
+      <div class="review-ava">
+        <img src="./assets/img/product-detail/user1.png">
+      </div>
+      <div class="review-content w-100 ms-3">
+        <div class="d-flex">
+          <p class="me-auto mb10 user-name mdt">HueVT99</p>
+          <span class="smt">2022/12/02</span>
+        </div>
+        <div>
+          <div class="d-flex rate-start">
+            <i class="fa-solid fa-star fa"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="d-flex">
+          <p class="user-cmt smt me-auto">Baking time will vary if you change the pan size. Every oven is different so I can’t
+            say for certain what you’ll need to adjust it to.</p>
+          <div class="like-review">
+            <i class="align-middle fa-regular fa-heart fa-lg"></i>
+            <span class="smt ms-2">19</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
