--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
           <table class="table">
             <thead>
               <tr>
-                <th scope="col"><a routerLink="/rings">Rings</a></th>
+                <th scope="col"><a routerLink="/shop-all/rings">Rings</a></th>
                 <th scope="col"><a routerLink="/earrings">Earrings</a></th>
                 <th scope="col"><a routerLink="/bracelets">Bracelets</a></th>
                 <th scope="col"><a routerLink="/necklaces">Necklaces</a></th>
