--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -115,6 +115,15 @@
                   </tr>
                 </tbody>
               </table>
+              <h6 class="text-center mt-4">How To Measure</h6>
+              <div class="row mt-3">
+                <div class="col-4 px-0"></div>
+                <div class="col-4 px-0">
+                  <img src="./assets/img/product-detail/measure.png">
+                </div>
+                <div class="col-4 px-0"></div>
+              </div>
+              <!--Collapse How To Measure-->
             </div>
           </div>
         </div>
@@ -430,9 +439,8 @@
 <!--MAY YOU ALSO LIKE-->
 <div class="also-like">
   <h5 class="text-center">You May Also Like</h5>
-  <div class="container">
-    <div id="carouselalsolike" class="carousel slide" data-bs-ride="true">
-      <div class="carousel-inner">
+  <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also" data-bs-ride="true">
+      <div class="carousel-inner container">
         <div class="carousel-item active">
           <div class="row">
             <div class="col-3">
@@ -486,11 +494,119 @@
           </div>
         </div>
         <div class="carousel-item">
-
+          <div class="row">
+            <div class="col-3">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like5.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  View details
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like6.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  View details
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like7.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  View details
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like8.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  View details
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row">
+            <div class="col-3">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like5.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  View details
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like6.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  View details
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like7.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  View details
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like8.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  View details
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselalsolike" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselalsolike" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-  </div>
 </div>
 <!--REVIEW-->
 <div class="review">
@@ -516,14 +632,14 @@
       <div class="modal fade" id="review">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
-            <h5 class="modal-title">Write A Review</h5>
+            <h5 class="modal-title mb-4">Write A Review</h5>
             <p class="mdt">Select your rating</p>
-            <div class="d-flex">
-              <i class="fa-solid fa-star fa"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+            <div class="d-flex mb-5">
+              <i class="fa-regular fa-star fa-lg"></i>
+              <i class="fa-regular fa-star fa-lg"></i>
+              <i class="fa-regular fa-star fa-lg"></i>
+              <i class="fa-regular fa-star fa-lg"></i>
+              <i class="fa-regular fa-star fa-lg"></i>
             </div>
             <label>Message (*)</label>
             <textarea class="inpu" rows="4" required></textarea>
