--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -39,7 +39,11 @@
 /*Description & Detail*/
 
 /*Similar-product*/
-
+/*also like*/
+.carousel-also{
+  margin-bottom:120px;
+  padding-top:40px;
+}
 /*Compare*/
 .simi-prod{
   margin-top:120px;
@@ -79,7 +83,6 @@
 /*Review*/
 .review-start{
   justify-content: center;
-  margin-top:100px;
 }
 .rate-start{
   margin-bottom:20px;
