--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -51,11 +51,12 @@
 }
 .card-prd{
   position:relative;
+  overflow:hidden;
 }
 .card-prd-bt{
   padding-top: 10px;
   padding-bottom: 10px;
-  background:#e7e7e7;
+  background:#fff;
   text-align:center;
   position:absolute;
   bottom:0px;
@@ -65,6 +66,11 @@
 .card-prd:hover > .card-prd-bt{
   display:block;
   transition: 0.4s all;
+}
+.card-prd:hover > .img{
+  transform:scale(108%);
+  filter:brightness(95%);
+  transition:0.4s all;
 }
 .card-prd .modal .line{
   margin-top:10px;
